# sendgrid-inbound-parse-starter

./: README.md  example.py  pyproject.toml
inbound_parse/: __init__.py  app.py  parser.py
tests/: test_app.py  test_parser.py
