[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sendgrid-inbound-parse-starter"
version = "0.1.0"
description = "A minimal, documented Flask starter for receiving inbound email via SendGrid Inbound Parse."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Saifullah Khan", email = "saifullah4khan@gmail.com" }]
keywords = ["sendgrid", "inbound-parse", "email", "flask", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
]
dependencies = ["flask>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/saifullah4khan/sendgrid-inbound-parse-starter"
Issues = "https://github.com/saifullah4khan/sendgrid-inbound-parse-starter/issues"

[tool.setuptools]
packages = ["inbound_parse"]
